[project]
name = "age-orm"
version = "0.2.0"
description = "A Python ORM for Apache AGE graph database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Kashif Iftikhar", email = "kashif@compulife.com.pk" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.3.0",
]

[project.urls]
Homepage = "https://age-forge.github.io/projects/age-orm"
Documentation = "https://age-forge.github.io/docs/"
Repository = "https://github.com/age-forge/age-orm"
Issues = "https://github.com/age-forge/age-orm/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "ipython>=9.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ipython>=9.10.0",
]
